--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="orange-text">r</span>y</h3>
             <ul>
@@ -22,19 +30,27 @@
         <div class="introduction">
             <div class="heading-point">
                 <h2>Hi, I am</h2>
-            <h1>Mary Hardy</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime velit vel <br>dolorum incidunt mollitia eaque modi corrupti ex debitis.</p>
-            <div class="nav-btn">
-                <button class="btn-primary">Downlaod CV</button>
-            <button class="btn-contact">Contact</button>
+                <h1>Mary Hardy</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime velit vel dolorum incidunt
+                    mollitia eaque modi corrupti ex debitis.</p>
+                <div class="nav-btn">
+                    <button class="btn-primary"><span class="icon"><i class="fa-solid fa-download"></i></span>Downlaod
+                        CV</button>
+                    <button class="btn-contact"><span class="icon"><i class="fa-solid fa-phone"></i></span>Contact</button>
+                </div>
             </div>
-            </div>
-            <div class="image">
-                <img src="images/header_bg.png" alt="">
+            <div class="image2">
+                <img src="images/hardy.png" alt="">
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about">
+            <h2 class="about-title">About Me</h2>
+            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
+    </main>
     <footer></footer>
 </body>
+
 </html>
